ext/-test-/exception/ensured.c
@@ -18,8 +18,22 @@ ensured(VALUE module, VALUE object)
     return rb_ensure(begin, object, ensure, object);
 }
 
+static VALUE
+raise(VALUE exc)
+{
+    rb_exc_raise(exc);
+    return Qnil;
+}
+
+static VALUE
+ensure_raise(VALUE module, VALUE object, VALUE exc)
+{
+    return rb_ensure(rb_yield, object, raise, exc);
+}
+
 void
 Init_ensured(VALUE klass)
 {
     rb_define_module_function(klass, "ensured", ensured, 1);
+    rb_define_module_function(klass, "ensure_raise", ensure_raise, 2);
 }
